# devopsProject

./: .env-build  .env-package  .env-test  CMakeLists.txt  Makefile  Report.md  compose.yml  debian.cmake  fedora.cmake  opensuse.cmake  testsuite.tar.xz
.circleci/: config.yml
.github/workflow/: Build.yml
.github/workflows/: Build.yml  Fedora.yml  opensuse.yml
docker/fedora/: Dockerfile
docker/openSUSE/: Dockerfile
docker/ubuntu/: Dockerfile
testsuite/: CMakeLists.txt  demoUnzip.sh  errorOpening.sh  multipleFileArchive.sh  tarXZDirectory.sh  tooManyFiles.sh
